[gd_scene load_steps=3 format=3 uid="uid://beymyh66ic34e"]

[ext_resource type="Texture2D" uid="uid://p5y2oldpfum3" path="res://hellhellhell.jpg" id="1_hmexa"]
[ext_resource type="Script" path="res://SCENES/death.gd" id="1_ufv12"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufv12")

[node name="Hellhellhell" type="Sprite2D" parent="."]
position = Vector2(575, 324)
scale = Vector2(1.88133, 1.8875)
texture = ExtResource("1_hmexa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.383
anchor_right = 0.5
anchor_bottom = 0.383
offset_left = -40.0
offset_top = -11.184
offset_right = 40.0
offset_bottom = 11.816
grow_horizontal = 2
grow_vertical = 2
text = "YOU DIED."

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -50.5
offset_right = 44.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
